13Dec98========================================================================
1. Fixed VS6 lat/long in prefix_data and wpxloc.raw
2. Sorted out last in times for remote users
3. editted and substitued G0RDI's version of the install instructions over
mine in spider/html
4. fixed telnet connections
5. added connect instructions to html tree.
6. Added some more help
7. Upissued version
12Dec98========================================================================
1. Incorporated sh/st, (un)set/lockout, forward/opername from Iain G0RDI
2. Added group handling with (un)set/group, show/group. This allows arbitrary
groups to be formed (for ann/<group> for example) and is also used to 'filter' 
spots, announces, wwvs etc into groups of cluster nodes (useful for creating 
disjoint cluster networks)
3. **** CHANGE mylongtitude to mylongitude in DXVars.pm ****
4. Altered QRA locator routines so they work correctly!
5. Fixed all commands that had the wrong mylat(itude) and mylong(itude) names
in.
07Dec98========================================================================
1. Added set/name, set/qra, set/location, set/qth, set/homenode, set/bbs, 
set/email
2. changed the Msg socket close to a shutdown (hopefully more reliable), this 
should stop clients hanging on exit.
3. Added Alias support for help
4. Added lltos and stoll routines to DXBearing
5. Added auto prompting for name, qth, location and homenode if any of these
aren't known.
06Dec98========================================================================
1. Fixed DXBearing::is_qra so that it correctly detects full QRA locators
2. Added sh/qra for doing locator distances and bearings
3. Added some stuff to Notes.txt on hints for command writers
4. Changed help system to use just one file per language
5. Started adding more help
6. Fixed 24Mhz band limits
7. Added apropos command and lots of new help text
05Dec98========================================================================