@@ -12,7 +12,7 @@
 	<p>
 <!-- Created: Sun Dec 13 20:25:14 GMT 1998 -->
 <!-- hhmts start -->
-Last modified: Sun Dec 13 22:31:33 GMT 1998
+Last modified: Mon Dec 14 00:29:00 GMT 1998
 <!-- hhmts end -->
 	<p>At the moment, anybody can connect inwards at any time from outside, either by ax25 or by
 	  telnet (assuming you have followed the instructions in <a href="install.html">installation</a>
@@ -108,6 +108,6 @@ Last modified: Sun Dec 13 22:31:33 GMT 1998
 		connection.
 	</ul>
     <hr>
-	<h5>$Id</h5>
+	<h5>$Id$</h5>
   </body>
 </html>
